fixed mobile styles for client gallery( general alignment and product preview items), refactoring clientGallery.css, fixing styles for image in editProduct popup, updated preview hook

--- a/assets/css/components/clientGallery.css
+++ b/assets/css/components/clientGallery.css
@@ -22,27 +22,73 @@
     px-16;
 }
 
-.galleryImage__wrapper {
-    width: 309px;
-
-}
-
-.photos__rect{
-   display: flex;
-   width: 309px;
-   height: 300px;
-   background-color: #F5F6F8;
-   @apply rounded-lg
+.photos__rect {
+    background: linear-gradient(131.5deg, #F5F6F8 -0.97%, #EDEDED 100%);
+    height: 170px;
+    @apply rounded-lg
+    flex
+    w-auto
+    max-w-full
 }
 
 .frame {
     width: 219px;
     height: 178px;
-
 }
 
 .preview {
     height: 650px
+}
+
+.productPreview__client > li > .productPreview_photo {
+    @apply relative
+    cursor-pointer
+}
+
+.productPreview__client > li > .productPreview_photo::before {
+    content: '';
+    background: linear-gradient(0deg, rgba(31, 28, 30, 0.65) 0%, rgba(31, 28, 30, 0.065) 100%);
+    @apply absolute
+    block
+    top-0
+    w-full
+    h-full
+    transition-all
+    duration-300
+    opacity-0
+    z-10
+    rounded-lg;
+}
+
+.productPreview__client > li > .productPreview_photo::after {
+    content: 'View product';
+    @apply absolute
+    text-base-100
+    text-center
+    flex
+    h-12
+    items-center
+    justify-center
+    bottom-4
+    left-1/2
+    border
+    border-base-100
+    -translate-x-1/2
+    p-4
+    w-11/12
+    transition-all
+    duration-300
+    opacity-0
+    z-20
+    rounded-lg;
+}
+
+.productPreview__client > li:hover > .productPreview_photo::before {
+    @apply opacity-100;
+}
+
+.productPreview__client > li:hover > .productPreview_photo::after {
+    @apply opacity-40;
 }
 
 .settings__wrapper > div {
@@ -282,7 +328,7 @@
     @apply text-base-100;
 }
 
-.galleryItem .likeBtn{
+.galleryItem .likeBtn {
     @apply opacity-0
     absolute;
 }
@@ -336,14 +382,14 @@
     @apply bg-transparent !important;
 }
 
-.editProductPopup{
+.editProductPopup {
     @apply
     box-border
     h-full
     w-full;
 }
 
-.editProductPopup__img{
+.editProductPopup__img {
     background: linear-gradient(131.5deg, #F5F6F8 -0.97%, #EDEDED 100%);
 }
 
@@ -351,7 +397,7 @@
     max-height: 90%;
 }
 
-.errorPwdMsg ~ div > .relative input{
+.errorPwdMsg ~ div > .relative input {
     @apply border
     border-solid
     border-red-error-300
@@ -359,7 +405,7 @@
 }
 
 .mobileGalleryButtons a {
-   @apply inline-block
+    @apply inline-block
     w-full
     h-full;
 }
@@ -368,7 +414,7 @@
     text-transform: uppercase;
 }
 
-.customSelect select{
+.customSelect select {
     @apply text-base-300
     appearance-none
     border-0
@@ -384,7 +430,7 @@
     cursor-pointer
 }
 
-.customSelect{
+.customSelect {
     @apply
     w-full
     inline-block
@@ -397,14 +443,14 @@
     h-11
 }
 
-.customSelect::after{
+.customSelect::after {
     content: '';
     background: url('/images/chevron-thin-right.svg') no-repeat;
     width: 16px;
     height: 9px;
-    position:absolute;
+    position: absolute;
     right: 14px;
-    top:50%;
+    top: 50%;
     transform: translateY(-25%);
 }
 
@@ -444,27 +490,39 @@
     }
 
     .editProductPopup {
-      width: 95vw;
-      max-width: 1440px;
-      height: 95vh;
-      max-height: 894px;
-  }
+        width: 95vw;
+        max-width: 1440px;
+        height: 95vh;
+        max-height: 894px;
+    }
+}
 
+@media screen and (min-width: 640px) {
+    .photos__rect {
+        height: 300px;
+    }
 }
 
 @media screen and (max-width: 1024px) {
-    .choose-product{
-        display: inline-grid;
+    .choose-product {
+        @apply inline-grid
     }
-    .choose-product-item {width: 100%;}
+
+    .choose-product-item {
+       @apply w-full
+    }
 }
 
 @media screen and (min-width: 1024px) {
-    .choose-product{
-        display: flex;
+    .choose-product {
+        @apply flex
     }
+
     .customWatermarkPopup {
         max-height: 950px;
     }
-    .choose-product-item {width: 50%;}
+
+    .choose-product-item {
+        @apply w-1/2
+    }
 }
